                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 01-02-2005 fixed: flac playback works sometimes but most times not
  - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.
                      Requires new compiled mplayer.dll, old dll's still needs to be in old mplayer dir.
  - 28-01-2005 changed: using xbox highresolution timers for timing. Possibly better sync.
  - 28-01-2005 added: mpng playback support, usefull for testing video quality. (libpng-1.2.8)
  - 17-01-2005 fixed: playback failes if Output to all Speakers is selected and a AC3 2.0 stream is found.
  - 16-01-2004 fixed: avi's > 2GB stackoverflow crash
                      patch from Bugzilla Bug 86, avi_idx_quicksort overflows stack on >2GB ODML file, http://bugzilla.mplayerhq.hu/show_bug.cgi?id=86
                      xbmc: [ 1103426 ] aviheader.c bug - transcoded AVIs don't play
  - 14-01-2005 changed: improved FF/RW in video's, should display 2fps during 8x-32x modes. 
                        still some problems when decoding using ffmpeg, ff/rw work, but no picture.
  - 14-01-2005 fixed: FF/RW in mp3/wma
  - 02-01-2005 new: initial pre6 import, some bugs still remain
  - 25-12-2004 changed: dvd subtitles sould now be allocated nomatter settings in mplayer.conf
  - 25-12-2004 fixed: srt subtitles wouldn't auto load properly
  - 25-12-2004 fixed: huge memleak in vobsub loader code, fixes large vobsubs and decreases footprint of vobsubs
  - 20-12-2004 added: support for multiple subtitles, with language extension ie: filename.eng.sub
  - 20-12-2004 changed: new subtitle name interface for xbmc