@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 07-02-2005 fixed: seeking in mpg's type video's sometimes reverted to beginning.
   - 01-02-2005 fixed: flac playback works sometimes but most times not
   - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.
                       Requires new compiled mplayer.dll, old dll's still needs to be in old mplayer dir.
